--- a/projects.html
+++ b/projects.html
@@ -29,30 +29,20 @@
         <p>Developed a responsive weather application delevering real time weather updates with an intuitive, adaptive UI.</p>
       </div>
       <div class="project-card">
-        <h3><a href="videos\rcb.mp4">RCB Team Website</a></h3>
+        <h3><a href=" https://oletilokesh.github.io/rcb-website/">RCB Team Website</a></h3>
         <p>Designed and developed a comprehensive website dedicated to RCB-IPL Team.</p>
       </div>
       <div class="project-card">
-        <h3><a href="videos\to-do list.mp4">To-Do List application</a></h3>
+        <h3><a href="videos\to-do-list.mp4">To-Do List application</a></h3>
         <p>Developed a To-Do List application using Python's Tkinter for an interactive GUI experience.</p>
       </div>
       <div class="project-card">
-        <h3><a href="videos/calculator.mp4">Simple Calculator</a></h3>
+        <h3><a href="videos/calculator2.mp4">Simple Calculator</a></h3>
         <p>Created a Simple Calculator with an interactive GUI using Python's Tkinter module.</p>
       </div>
       <div class="project-card">
         <h3><a href="videos/password generator.mp4">Robust Password Generator</a></h3>
         <p>Developed a robust password generator to create strong and secure passwords using Python's Tkinter module.</p>
-      </div>
-      
-       
-       <div class="project-card">
-        <h3><a href="">Smart AI Receptionist for college</a></h3>
-        <p>A virtual assistant designed to help students, parents, and visitors with inquiries and appointment scheduling.</p>
-      </div>
-       <div class="project-card">
-        <h3><a href="videos/python game.mp4">Fruit Catching Game</a></h3>
-        <p>A fun and interactive game built using Python and GUI libraries like Pygame.</p>
       </div>
     </div>
   </section>
@@ -61,3 +51,4 @@
     <p>© 2025 Oleti Lokesh. All rights reserved.</p>
   </footer>
 </body>
+
